--- a/style/style.css
+++ b/style/style.css
@@ -6,14 +6,13 @@ html{
 }
 /********************* header *********************/
 header{
-    height: 80px;
+    height: 83px;
     /* background-color: #3F2817; */
-    background-color: hsla(0, 0%, 0%, 0.678);
+    background-color: #000000;
     position: fixed;
-    width: 100%; 
+    width: 100%;
 }
 .navbar{
-    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -26,6 +25,9 @@ header{
 .navbar-brand img{
     width: 150px;
 }
+.nav-link{
+    margin-right: 20px;
+}
 .nav-link a{
     color: #FFFFFF;
 }
@@ -35,6 +37,20 @@ header{
 .navbar-collapse{
     display: flex;
     justify-content: flex-end;
+}
+.logo{
+    box-shadow: none;
+}
+.navbar-collapse{
+    background-color: #000000;
+    width: 100%;
+    margin: 0;
+}
+.container-fluid{
+    padding: 0;
+}
+.navbar-toggler-icon{
+    color: #FFFFFF;
 }
 /********************* fin header *********************/
 /********************* main *********************/
@@ -93,7 +109,7 @@ header{
     margin-top: 10px;
 }
 /********************* Vista móvil jumbotron *********************/
-@media (max-width: 840px) {
+@media (max-width: 960px) {
     .jumbotron{
         display: flex;
         flex-direction: column;
@@ -128,6 +144,7 @@ header{
     }
     .mensaje-span{
         font-size: 12px;
+        text-align: center;
     }
     .titulo{
         width: 95%;
@@ -158,6 +175,7 @@ header{
 .parrafo-presentacion2{
     width: 85%;
     text-align: center;
+    font-size: 20px;
 }
 .presentacion-video{
     display: flex;
@@ -175,7 +193,27 @@ header{
     box-shadow: 0px 29px 50px -20px rgba(0,0,0,0.75);
 }
 /********************* Vista móvil presentación *********************/
-@media (max-width: 840px) {
+@media (min-width: 1140px) {
+    .presentacion{
+        width: 95%;
+    }
+    .presentacion-video{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .video{
+        width: 95%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .presentacion-imagen{
+        display: flex;
+        flex-direction: column-reverse;
+        margin-top: 85px;
+    }
+}
+@media (max-width: 1140px) {
     .presentacion{
         width: 95%;
     }
@@ -217,13 +255,11 @@ header{
 }
 /********************* menú cafés *********************/
 .disfruta-cafes{
-    /* background-image: url(../assets/images/inicio/fondo-mensaje-menu-2.jpg); */
-    /* background-color: #000000; */
     background-image: linear-gradient(to top, #2d2d2d, #262626, #1f1f1f, #181818, #101010, #0b0b0b, #060606, #000000, #000000, #000000, #000000, #000000);
     height: 250px;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: 50%;
+    /* background-position: 50%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -275,40 +311,52 @@ header{
     text-align: center;
 }
 /********************* Vista móvil menú cafes *********************/
+@media (max-width: 992px) {
+    .menu-disponible{
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: auto auto;
+        justify-content: center;
+        width: 95%;
+    }
+}
 @media (max-width: 768px) {
-    .disfruta-cafes h2{
-        font-size: 30px;
-        text-align: center;
-    }
-    .menu-disponible{
-        display: grid;
-        grid-template-columns: auto auto;
-    }
-}
-@media (max-width: 420px) {
     .menu-disponible{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
+    .disfruta-cafes h2{
+        font-size: 40px;
+        text-align: center;
+    }
 }
-@media (max-width: 840px) {
+@media (max-width: 350px) {
+    .menu-disponible{
+        width: 90%;
+    }
+    .menu-cafes{
+        width: 85%;
+    }
+    .imagen-cafe{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .imagen-cafe img{
+        width: 80%;
+        box-shadow: none;
+    }
+    .descripcion-cafe p{
+        font-size: 18px;
+    }
+    .descripcion-cafe span{
+        font-size: 13px
+    }
     .disfruta-cafes h2{
         font-size: 30px;
         text-align: center;
-    }
-    .menu-disponible{
-        display: grid;
-        grid-template-columns: auto auto;
-    }
-}
-@media (max-width: 420px) {
-    .menu-disponible{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
 }
 /********************** presentacion del menú de pan **********************/
@@ -371,55 +419,6 @@ header{
     }
     .imagen-presentacion img{
         width: 98%;
-    }
-}
-/********************** Sobre nosotros **********************/
-.sobre-nosotros{
-    display: flex;
-    flex-direction: column;
-    /* background-color: #bbbbbb; */
-    background-color: #000000;
-}
-.presentacion-cafeteria{
-    width: 85%;
-    display: flex;
-    margin: 0 auto;
-    margin-top: 250px;
-}
-.contenido-nosotros{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.mensaje-nosotros p{
-    color: #FFFFFF;
-    font-size: 28px;
-    text-align: center;
-    text-shadow: 1px 5px 7px rgba(0,0,0,0.51);
-}
-.caja2{
-    display: flex;
-    flex-direction: row-reverse;
-}
-.margen{
-    margin-top: 50px;
-}
-/********************* Vista móvil sobre nosotros *********************/
-@media (max-width: 840px) {
-    .sobre-nosotros-presentacion p{
-        font-size: 20px;
-    }
-    .caja1{
-        display: flex;
-        flex-direction: column;
-    }
-    .imagen-cafeteria img{
-        display: none;
-    }
-}
-@media (max-width: 420px) {
-    .sobre-nosotros-presentacion p{
-        font-size: 15px;
     }
 }
 /********************** ubicaciones y aside **********************/
@@ -491,6 +490,7 @@ header{
 }
 .titulo-aside{
     font-weight: 700;
+    text-align: center;
 }
 .direccion{
     text-align: center;
@@ -606,3 +606,10 @@ header{
         width: 80%;
     }
 }
+@media (max-width: 350px) {
+    .derechos{
+        height: 350px;
+    }
+}
+
+/* Gracias por llegar hasta aqui :3 */
